Positioned the .test_summary_link as absolute, so IE7 doesn't overwrite the test name/link due to blocked wrap mixed with fixed height.  IE6 and Firefox are unaffected.

--- a/FitNesseRoot/files/css/fitnesse_base.css
+++ b/FitNesseRoot/files/css/fitnesse_base.css
@@ -405,6 +405,7 @@ div.merge_old
 
 .test_summary_link
 {
+	position: absolute; /*[acd] For IE7--prevents wrapping & hiding*/
 	text-align: right;
 }
 
